force-app/main/default/objects/aecm__Architecture_Component__c/aecm__Architecture_Component__c.object-meta.xml
<CustomObject>
    <description>Container for a component of an architecture such as a platform or system.</description>
    <label>Architecture Component</label>
    <nameField>
        <label>Architecture Component Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Architecture Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>