force-app/main/default/objects/aecm__Architecture_Component__c/fields/aecm__Component_Class__c.field-meta.xml
<CustomField>
    <fullName>aecm__Component_Class__c</fullName>
    <description>Indicates the type of component.</description>
    <label>Component Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Network</fullName>
            </value>
            <value>
                <fullName>Other System</fullName>
            </value>
            <value>
                <fullName>Platform</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>