force-app/main/default/objects/aecm__Architecture_Component__c/fields/aecm__Component_Type__c.field-meta.xml
<CustomField>
    <fullName>aecm__Component_Type__c</fullName>
    <label>Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>aecm__Component_Class__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Ad Hoc System</fullName>
            </value>
            <value>
                <fullName>Back Office Business Platform</fullName>
            </value>
            <value>
                <fullName>Cloud Storage</fullName>
            </value>
            <value>
                <fullName>Front Office Business Platform</fullName>
            </value>
            <value>
                <fullName>Integration Platform</fullName>
            </value>
            <value>
                <fullName>Middle Tier</fullName>
            </value>
            <value>
                <fullName>Onsite Storage</fullName>
            </value>
            <value>
                <fullName>Other Business Platform</fullName>
            </value>
            <value>
                <fullName>Router</fullName>
            </value>
            <value>
                <fullName>Security Appliance</fullName>
            </value>
            <value>
                <fullName>SSO</fullName>
            </value>
            <value>
                <fullName>Switch</fullName>
            </value>
            <value>
                <fullName>Telephony</fullName>
            </value>
            <value>
                <fullName>Telephony Appliance</fullName>
            </value>
            <value>
                <fullName>Virus Detection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>