force-app/main/default/objects/aecm__Architecture_Component__c/fields/aecm__Deprecation_Status__c.field-meta.xml
<CustomField>
    <fullName>aecm__Deprecation_Status__c</fullName>
    <label>Deprecation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deprecated</fullName>
            </value>
            <value>
                <fullName>Planed End of Life</fullName>
            </value>
            <value>
                <fullName>Planned Replacement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>