force-app/main/default/objects/aecm__Architecture_Component__c/fields/aecm__End_of_Life_Plan__c.field-meta.xml
<CustomField>
    <fullName>aecm__End_of_Life_Plan__c</fullName>
    <inlineHelpText>Provide a summary reasoning and plan.</inlineHelpText>
    <label>End of Life Plan Summary</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>