force-app/main/default/objects/aecm__Architecture_Component__c/fields/aecm__KTLO__c.field-meta.xml
<CustomField>
    <fullName>aecm__KTLO__c</fullName>
    <inlineHelpText>Keeping the Lights On (KTLO), costs of routine environment maintenance, data management, etc.</inlineHelpText>
    <label>KTLO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>