force-app/main/default/objects/aecm__Architecture_Component__c/fields/aecm__License_Costs__c.field-meta.xml
<CustomField>
    <fullName>aecm__License_Costs__c</fullName>
    <inlineHelpText>Annualized cost of core licenses and additional capability such as third-party apps and it&apos;s ongoing maintenance cost associated with this component.</inlineHelpText>
    <label>License Costs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>