force-app/main/default/objects/aecm__Architecture_Component__c/fields/aecm__Primary_Architecture_Domain__c.field-meta.xml
<CustomField>
    <fullName>aecm__Primary_Architecture_Domain__c</fullName>
    <description>Relates this component to an Architecture Domain</description>
    <inlineHelpText>Relate to a parent Architecture Domain.</inlineHelpText>
    <label>Primary Architecture Domain</label>
    <referenceTo>aecm__Architecture_Domain__c</referenceTo>
    <relationshipLabel>Architecture Components</relationshipLabel>
    <relationshipName>Architecture_Components</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>