force-app/main/default/objects/aecm__Architecture_Component__c/fields/aecm__Product_Support_Email__c.field-meta.xml
<CustomField>
    <fullName>aecm__Product_Support_Email__c</fullName>
    <label>Product Support Email</label>
    <type>Email</type>
</CustomField>