force-app/main/default/objects/aecm__Architecture_Component__c/fields/aecm__Secondary_Architecture_Domain__c.field-meta.xml
<CustomField>
    <fullName>aecm__Secondary_Architecture_Domain__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Additional architecture domain that this component is associated with.</description>
    <inlineHelpText>Link to a secondary supporting domain.</inlineHelpText>
    <label>Secondary Architecture Domain</label>
    <referenceTo>aecm__Architecture_Domain__c</referenceTo>
    <relationshipLabel>Architecture Components (Secondary Architecture Domain)</relationshipLabel>
    <relationshipName>Architecture_Components1</relationshipName>
    <type>Lookup</type>
</CustomField>