force-app/main/default/objects/aecm__Architecture_Component__c/fields/aecm__Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>aecm__Serial_Number__c</fullName>
    <inlineHelpText>Provide if an appliance or hardware.</inlineHelpText>
    <label>Serial Number</label>
    <type>TextArea</type>
</CustomField>