force-app/main/default/objects/aecm__Architecture_Component__c/fields/aecm__Target_Deprecation_Date__c.field-meta.xml
<CustomField>
    <fullName>aecm__Target_Deprecation_Date__c</fullName>
    <label>Target Deprecation Date</label>
    <type>Date</type>
</CustomField>