force-app/main/default/objects/aecm__Architecture_Component__c/fields/aecm__TCO__c.field-meta.xml
<CustomField>
    <fullName>aecm__TCO__c</fullName>
    <formula>aecm__KTLO__c +  aecm__License_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Cost of Ownership, (KTLO + License Costs)</inlineHelpText>
    <label>TCO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>