force-app/main/default/objects/aecm__Architecture_Component__c/fields/aecm__Vendor__c.field-meta.xml
<CustomField>
    <fullName>aecm__Vendor__c</fullName>
    <inlineHelpText>Name of component vender</inlineHelpText>
    <label>Vendor</label>
    <type>TextArea</type>
</CustomField>