force-app/main/default/objects/aecm__Architecture_Component__c/fields/aecm__Vendor_Support_Number__c.field-meta.xml
<CustomField>
    <fullName>aecm__Vendor_Support_Number__c</fullName>
    <label>Vendor Support Number</label>
    <type>Phone</type>
</CustomField>