force-app/main/default/objects/aecm__Architecture_Component__c/fields/aecm__Vendor_Website__c.field-meta.xml
<CustomField>
    <fullName>aecm__Vendor_Website__c</fullName>
    <label>Product Website</label>
    <type>Url</type>
</CustomField>