force-app/main/default/objects/aecm__Architecture_Component__c/fields/aecm__Version__c.field-meta.xml
<CustomField>
    <fullName>aecm__Version__c</fullName>
    <label>Version</label>
    <type>TextArea</type>
</CustomField>