force-app/main/default/objects/aecm__Architecture_Component__c/listViews/aecm__Architecture_Components_Kanban_by_Lifecy.listView-meta.xml
<ListView>
    <fullName>aecm__Architecture_Components_Kanban_by_Lifecy</fullName>
    <columns>NAME</columns>
    <columns>aecm__Primary_Architecture_Domain__c</columns>
    <filterScope>Everything</filterScope>
    <label>Components Kanban by Lifecycle</label>
</ListView>